--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,7 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>About</h1>
+    <h1>{{title}}</h1>
     <img src="/img/pic.jpeg" alt="mypic" />
+    <p>{{name}}</p>
   </body>
 </html>
