--- a/views/help.hbs
+++ b/views/help.hbs
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <script src="/js/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <h1>From a static file</h1>
+    <h1>{{message}}</h1>
   </body>
 </html>
