--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,1 +1,6 @@
-<h1>Static Header</h1>
+<h1>{{title}}</h1>
+<div>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/help">Help</a>
+</div>
