--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,8 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>{{title}}</h1>
+    {{> header}}
     <img src="/img/pic.jpeg" alt="mypic" />
-    <p>{{name}}</p>
+    {{> footer}}
   </body>
 </html>
