--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -7,8 +7,10 @@
     <title>404</title>
 </head>
 <body>
-    {{> header}}    
-    <p>{{message}}</p>
+    <div class="main-content">
+        {{> header}}    
+        <p>{{message}}</p>
+    </div>
     {{> footer}}
     
 </body>
