--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,8 +8,10 @@
     <title>About</title>
   </head>
   <body>
-    {{> header}}
-    <img src="/img/pic.jpeg" alt="mypic" />
+    <div class="main-content">
+      {{> header}}
+      <img class="portrait" src="/img/pic.jpeg" alt="mypic" />
+    </div>
     {{> footer}}
   </body>
 </html>
