--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -8,8 +8,10 @@
     <title>Help</title>
   </head>
   <body>
-    {{>header}}
-    <h1>{{message}}</h1>
+    <div class="main-content">
+      {{>header}}
+      <p>{{message}}</p>
+    </div>
     {{> footer}}
   </body>
 </html>
