--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,7 +9,10 @@
     <title>Home</title>
   </head>
   <body>
-    {{> header}}
+    <div class="main-content">
+      {{> header}}
+      <p>Use this site to get you weather data</p>
+    </div>
     {{> footer}}
   </body>
 </html>
