--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <script src="/js/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
   </head>
@@ -12,7 +11,14 @@
     <div class="main-content">
       {{> header}}
       <p>Use this site to get you weather data</p>
+      <form >
+        <input type="text" placeholder="location">
+        <button>Search</button>
+      </form>
+      <p id="message1"></p>
+      <p id="message2"></p>
     </div>
     {{> footer}}
+    <script src="/js/app.js"></script>
   </body>
 </html>
