added about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
   <body>
     <div class="main-content">
       {{> header}}
+      <p>This site was created by Mohammed Khushab Alam. It uses data from mapbox API and openweather API</p>
       <img class="portrait" src="/img/pic.jpeg" alt="mypic" />
     </div>
     {{> footer}}
